# web-environments

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  USAGE.md  browser_config.py  database.py  index.py  initial_tasks.py  main.py  new_page_event.py  pyproject.toml  recorder.py  request_event.py  requirements.txt  response_event.py  setup.sh  stealth_browser.py  stealth_scripts.py  step.py  stepRecord.py  storage_config.py  task.py  test_imports.py  test_improved_extraction.py  test_judge.py
.github/workflows/: desktop-app-release.yml
app/: README.md  __init__.py  build_release.py  launch_task_collector.sh  task_collector_app.py  task_worker.py
desktop_app/: README.md  build.sh  build_release.py  launch_task_collector.sh  task_collector_app.py  task_worker.py  test_build.sh
desktop_app/resources/: TaskCollector.icns
source_data/: database.py  schema.py
src/: main.py  models.py
src/browser/: browser.py  page.py  recorder.py  request_event.py  response_event.py  stealth_browser.py
src/browser/handlers/: README.md  new_page_event.py  request_event.py  response_event.py
src/browseruse/: eval_path.py
src/browseruse/logs/: agent_output_eval_path_2025-08-22_20-02-34.txt  agent_output_eval_path_2025-08-22_22-58-03.txt  agent_output_eval_path_2025-08-22_23-04-14.txt  agent_output_eval_path_2025-08-22_23-04-50.txt  agent_output_eval_path_2025-08-22_23-20-54.txt
src/capture/: offline_capture.py  replay.py  replay_task.py  sandbox.py
src/config/: browser_config.py  browser_scripts.py  initial_tasks.py  start.py  stealth_scripts.py  storage_config.py
src/data/: tasks.db-shm
src/data/user-data/: .org.chromium.Chromium.OvxTTO  .org.chromium.Chromium.QiV1ac  Local State  first_party_sets.db
src/db/: database.py  models.py  schema.py  step.py  task.py
src/environments/: capture.py  environment.py  fuzzy_match.py  launch.py  lm_match.py  models.py  replay.py
src/environments/utils/: lm_match.py
src/eval/: browseruse.py  checkpoints.py  evaluate.py  judge.py  judges.py  main.py  openai_cua.py  parse_tasks.py  task_to_eval.py
src/eval/harness/: _browseruse.py  definitions.py  harness.py  session_provider.py
src/eval/run/: browseruse.py  openai_cua.py
src/eval/tars/: tars.py
src/page/: actual_page.py  new_page_event.py
src/requests/: request_event.py
src/responses/: response_event.py
src/scripts/: __init__.py  extract_post_requests.py  merge.py  upload_gcp_data.py  upload_hf.py  view.py
src/source_data/: database.py  schema.py
src/steps/: step.py  stepRecord.py  step_record.py
src/tasks/: db_to_jsonl_format.py  extract_checkpoints.py  task.py
src/utils/: environment_fingerprint.py  get_iso_datetime.py  get_screenshot_path.py  get_task_description.py  get_task_info.py  get_tasks_video_path.py  normalize_url.py  oai.py
utils/: get_iso_datetime.py  get_screenshot_path.py  get_task_description.py  get_tasks_video_path.py
(+1163 files in other folders)
