[project]
name = "web-envs"
version = "0.1.0"
description = "Web Environments Task Recorder"
authors = [{ name = "Joan Cabezas", email = "joan.santiago.cabezas@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.7.10",
    "dspy>=3.0.3",
    "google-cloud-storage>=3.4.0",
    "kernel>=0.12.0",
    "litellm>=1.77.5",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
    "typer>=0.19.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
data-collector = "main:cli"
evaluate-browseruse = "eval.browseruse:_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff.lint]
ignore = ["F722"]

[dependency-groups]
dev = [
    "mlflow>=3.4.0",
    "pyinstaller>=6.16.0",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
]
