[project]
name = "web-envs"
version = "0.1.0"
description = "Web Environments Task Recorder"
authors = [{ name = "Joan Cabezas", email = "joan.santiago.cabezas@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.9.1",
    "dspy>=3.0.3",
    "google-cloud-storage>=3.4.0",
    "kernel>=0.15.0",
    "litellm>=1.78.7",
    "openai>=1.109.1",
    "pandas>=2.2.0",
    "peewee>=3.17.0",
    "playwright>=1.55.0",
    "pre-commit>=4.3.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
    "typer>=0.19.2",
]

[project.scripts]
web-envs = "main:cli"
postprocess-toolcalls = "scripts.postprocessing._1_tool_calls_format:parse"
postprocess-credentials = "scripts.postprocessing._2_credentials:main"
postprocess-set-checkpoints = "scripts.postprocessing._3_determine_checkpoints:main"
launch-environment = "environments.launch:_main"
evaluate-browseruse = "eval.run.browseruse:_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff.lint]
ignore = ["F722"]

[dependency-groups]
dev = [
    "mlflow>=3.4.0",
    "pyinstaller>=6.16.0",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "huggingface-hub>=0.26.0",
]
